fix: Update Docker and release workflows to use root context and remove working-directory references

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
-          context: ./actual-events
+          context: .
           push: true
           tags: |
             ghcr.io/${{ github.repository }}-actual-events:${{ steps.get_version.outputs.VERSION }}
