--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   actual-events:
     # Use the published GHCR image by default; comment out 'image' and uncomment 'build' to rebuild locally
-    image: ghcr.io/rjlee/actual-tx-linker-actual-events:latest
+    image: ghcr.io/rjlee/actual-events:latest
     # build: .
     container_name: actual-events
     env_file:
