fix: Changing AUTH_TOKEN specification

--- a/.env.example
+++ b/.env.example
@@ -12,12 +12,12 @@ LOOKBACK_DAYS=60
 SCAN_INTERVAL_MS=15000
 
 # Server
-PORT=4000
+HTTP_PORT=3000
 LOG_LEVEL=info
 
 # Security
 # Optional bearer token for auth (if set, required for /events, /nudge, and WS)
-# AUTH_TOKEN=changeme
+# EVENTS_AUTH_TOKEN=changeme
 
 # CORS allowlist (comma-separated origins). Use * to allow any.
 # CORS_ORIGINS=*
