--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
+  "engines": {
+    "node": ">=22"
+  },
   "dependencies": {
     "@actual-app/api": "^25.6.1",
     "dotenv": "^16.5.0",
