--- a/package.json
+++ b/package.json
@@ -20,26 +20,26 @@
     "node": ">=22"
   },
   "dependencies": {
-    "@actual-app/api": "^25.6.1",
+    "@actual-app/api": "^25.11.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.19.2",
-    "cors": "^2.8.5",
-    "ws": "^8.18.0",
-    "pino": "^8.0.0"
+    "pino": "^10.1.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.0",
+    "@semantic-release/commit-analyzer": "^10.0.0",
+    "@semantic-release/git": "^10.0.0",
+    "@semantic-release/github": "^9.0.0",
+    "@semantic-release/npm": "^12.0.2",
+    "@semantic-release/release-notes-generator": "^10.0.0",
     "eslint": "^8.57.0",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "lint-staged": "^16.0.0",
     "prettier": "^3.3.3",
     "semantic-release": "^21.0.0",
-    "@semantic-release/changelog": "^6.0.0",
-    "@semantic-release/commit-analyzer": "^10.0.0",
-    "@semantic-release/github": "^9.0.0",
-    "@semantic-release/npm": "^9.0.0",
-    "@semantic-release/release-notes-generator": "^10.0.0",
-    "@semantic-release/git": "^10.0.0",
     "supertest": "^7.0.0"
   },
   "release": {
