--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.0",
     "@semantic-release/changelog": "^6.0.0",
     "@semantic-release/commit-analyzer": "^10.0.0",
     "@semantic-release/git": "^10.0.0",
     "@semantic-release/github": "^9.0.0",
     "@semantic-release/npm": "^12.0.2",
     "@semantic-release/release-notes-generator": "^10.0.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.39.1",
+    "globals": "^15.14.0",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "lint-staged": "^16.0.0",
